# SystemAcceptance

./: .gitignore  Readme.md  SystemAcceptance.js
App/: Build_Win64.bat  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  Installer.nsi  SystemAcceptance.sln
App/NFSystemAcceptance/: AlgoForm.Designer.cs  AlgoForm.cs  App.config  BrowserMenuHandler.cs  FileHelper.cs  MqttStatusListener.cs  NFSystemAcceptance.csproj  PdfOptions.Designer.cs  PdfOptions.cs  PdfOptions.resx  Program.cs  SelectKeyDialog.Designer.cs  SelectKeyDialog.cs  SelectKeyDialog.resx  SpecificationForm.Designer.cs  SpecificationForm.cs  SystemAcceptance.csproj  SystemAcceptance_TemporaryKey.pfx  mainForm.Designer.cs  mainForm.cs  mainForm.resx  packages.config  tabPanel.Designer.cs  tabPanel.cs
App/NFSystemAcceptance/Progress/: Progress.cs  Progress.designer.cs  Progress.resx
App/NFSystemAcceptance/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.settings
App/Setup_SystemAcceptance/: Setup_SystemAcceptance.vdproj
App/SystemAcceptance/: SystemAcceptance.vdproj
App/doc/: Readme.md
CL/: Tester.csv
CL/Certificate/: Certificate.md
CL/Depth Measurement/: Depth Measurement.css  Depth Measurement.md  NF_NED_MScan_Abnahme_Tiefe01.ned  NF_NED_MScan_Abnahme_Tiefe02.ned  NF_NED_MScan_Abnahme_Tiefe_LS.npsx
CL/Linearity Error/: Linearity Error.md  NF_NED_MScan_Abnahme_LIN_LS.ned  NF_NED_MScan_Abnahme_LIN_LS.npsx  NF_NED_MScan_Abnahme_PreProc_LS.ned
CL/Noise/: NF_NED_LineSensorNoiseStatistics.ned  NF_NED_LineSensorNoiseStatistics.npsx  Noise.css  Noise.md  Noise.md_
CL/Roughness/: NF_NED_MScan_Abnahme_Rauheit_LS.ned  NF_NED_MScan_Abnahme_Rauheit_LS.npsx  Roughness.css  Roughness.md  Roughness.md_  Standards.json
CL/Sensors/: scanCL.csv
CL/Standards/: Ebenheitsnormal.csv  Rauhnormal.csv  Stufennormal.csv  Tiefennormal.csv
CL/Step measurement/: NF_NED_MScan_Abnahme_Steps_LS.ned  NF_NED_MScan_Abnahme_Steps_LS.npsx  Standards.json  Step measurement.md
CL/Straightness of X-axis/: NF_NED_MScan_Abnahme_GX_LS.npsx  Straightness of X-axis.md
CL/Straightness of Y-axis/: NF_NED_MScan_Abnahme_GX_LS.npsx  NF_NED_MScan_Abnahme_GY_LS.ned  NF_NED_MScan_Abnahme_GY_LS.npsx  NF_NED_MScan_Abnahme_GY_PS.npsx  Standards.json  Straightness of Y-axis.css  Straightness of Y-axis.md
CL/Summary/: Summary.css  Summary.md
CM/: Tester.csv
CM/Certificate/: Certificate.css  Certificate.md
CM/Depth A1/: Depth A1.md  Standards.json  grooveA2.ned
CM/Depth A2/: Depth A2.css  Depth A2.md  Standards.json  groovePreLevel.ned  groovePt.ned
CM/Flatness/: Flatness.css  Flatness.md  Standards.json
CM/Lateral X/: Lateral X.css  Lateral X.md  Lateralnormal.ned  Lateralnormal.npsx  Standards.json
CM/Lateral Y/: Lateral Y.css  Lateral Y.md  Lateralnormal.npsx  Standards.json
CM/Lighting/: Lighting.md  Standards.json
CM/Roughness/: Abnahme_Rauheit.ned  Roughness.css  Roughness.md
CM/Sensors/: surfCM.csv
CM/Standards/: Ebenheitsnormal.csv  Lateralnormal.csv  Rauhnormal.csv  Standards.json  TiefeneinstellnormalA2.csv
CM/Summary/: Summary.md
CP/: Stages.csv  Table.csv
CX/: Stages.csv
WI/: Tester.csv
(+117 files in other folders)
